--- a/style.css
+++ b/style.css
@@ -1,90 +1,190 @@
-/* General styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;700&display=swap');
+
+/* reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+:root {
+    --primary-text-color: #183b56;
+    --secondary-text-color: #577592;
+    --accent-color: rgb(185, 135, 231);
+    --accent-color-dark: rgb(131, 85, 174);
+    --padding-inline-section: 20px
+}
+
 body {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-text-color);
 }
 
-/* Navbar styles */
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    height: 80px;
-    background-color: rgb(250, 250, 250);
-    border-bottom: 1px solid #7d7a7a;
-}
-
-nav ul {
-    display: flex;
-    justify-content: center;
-}
-
-nav ul li {
-    list-style-type: none;
-    margin: 0 23px;
-    margin-top: 5%;
-    font-size: 1.25rem;
-}
-
-nav ul li a {
-    text-decoration:none;
-    color: rgb(11, 11, 11);
-}
-
-nav ul li a:hover {
-    color: rgb(137, 137, 240);
-    font-size: 1.26rem;
-}
-
-
-.left {
-    font-size: 2rem;
-}
-
-.left a {
-    font-size: 2rem;
-    cursor: pointer;
-    color: #000000;
-    text-decoration: none;
-}
-
-/* Section styles */
-.firstsection {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 80px 0;
-}
-
-.firstsection>div {
-    width: 30%;
-}
-
-.leftsection {
+h1 {
     font-size: 2.5rem;
-    margin: 70px 0;
 }
 
-.rightsection img {
-    width: 80%;
-    margin: 50px 0;
+h2 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.25rem;
+    color: var(--secondary-text-color);
+    line-height: 1.8rem;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+}
+
+ul {
+    list-style: none;
+
+}
+
+/* utility classes */
+
+.small-bold-text {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.container {
+    max-width: 1180px;
+    margin-inline: auto;
+    padding-inline: var(--padding-inline-section);
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.hover-link {
+    color: var(--primary-text-color);
+}
+
+.hover-link:hover {
+    color: var(--accent-color);
+    transition: 0.2s ease-out;
+}
+
+.primary-button{
+    background-color: var(--accent-color);
+    border-radius: 6px;
+    font-weight: 700;
+    color: white !important;
+    padding: 12px 24px;
+    box-shadow: 0 0 2px var(--secondary-text-color);
+    transition: 0.2s ease-out;
+
+}
+
+.primary-button:hover {
+    background-color: var(--accent-color-dark);
+    transition: 0.2s ease-out;
+}
+/* top banner*/
+
+.top-banner {
+    background-image: url('./images/top-banner.jpeg');
+    background-color: rgb(198, 138, 254);
+    background-size: 1600px;
+
+}
+
+.banner-text {
+    color: white;
+    padding: 15px 30px;
+    text-align: center;
+
+}
+
+/* nav bar*/
+
+.main-nav {
+    margin-top: 20px;
+    justify-content: space-between;
+}
+
+.ourlogo img {
+    width: 330px;
+}
+
+.logo-name {
+    margin-inline-end: auto;
 }
 
 .purple {
-    color: blueviolet;
+    color: rgb(108, 15, 196);
+    font-weight: 700;
 }
 
-#element {
-    color: blueviolet;
+.nav-links {
+    flex-basis: 730px;
 }
 
+.nav-links ul {
+    justify-content: end;
+    gap: 40px;
+}
+
+/* header section */
+
+header {
+    padding: 50px var(--padding-inline-section) 0;
+}
+
+.header-section {
+    justify-content: center;
+    gap: 50px;
+}
+
+.header-left {
+    max-width: 40vw;
+}
+
+.header-left h1{
+    margin-top: 10px;
+    font-size: 2.2rem;
+}
+
+.get-started-btn{
+    margin-top: 20px;
+}
+
+.header-right img {
+    width: 650px;
+}
+
+/* big feature section */
+
+.big-feature-section {
+    padding: 30px var(--padding-inline-section);
+    margin-top: 5%;
+}
+
+.big-feature-container{
+    gap: 30px;
+}
+
+.feature-img img{
+    width: 500px;
+}
+
+.feature-desc{
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* Scheme.html section*/
 /* Dropdown menu styles */
 .dropdown-menu {
     display: none;
@@ -122,7 +222,7 @@ nav ul li a:hover {
 /* Container for the main content */
 .main-container {
     width: 100%;
-    max-width: 600px;
+    max-width: 1200px;
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -190,7 +290,7 @@ nav ul li a:hover {
     margin-top: 20px;
     padding: 20px;
     width: 100%;
-    max-width: 800px;
+    max-width: 1200px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -217,7 +317,7 @@ nav ul li a:hover {
     cursor: pointer;
     margin: 10px;
     transition: transform 0.3s, background-color 0.3s;
-    width: 30%;
+    width: 100%;
     max-width: 250px;
 }
 
@@ -258,4 +358,56 @@ nav ul li a:hover {
     nav .right ul li {
         margin: 10px 0;
     }
+}
+/* cta-section */
+
+.cta-section-container{
+    flex-direction: column;
+    gap: 30px;
+    color: white;
+
+}
+
+.cta-section {
+    padding: 120px var(--padding-inline-section) 80px;
+    background-color: rgb(207, 207, 211);
+}
+
+.cta-section-container p{
+    color: white;
+    margin-top: 20px;
+}
+
+/* footer */
+footer{
+    padding-block: 80px;
+    background-color: #ebf2fa;
+
+}
+.link-column {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.footer-container {
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.footer-container img {
+    margin-top: 2px;
+    width: 270px;
+}
+
+/* subfooter section */
+
+.subfooter {
+    background-color:#b9cde4;
+    padding: var(--padding-inline-section);
+}
+
+.subfooter-container {
+    justify-content: center;
+    gap: 30px;
 }
